--- a/Taxi_Price_Surge_Prediction.ipynb
+++ b/Taxi_Price_Surge_Prediction.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Taxi Price Surge Prediction.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNTUBHwL0KM7+GprJ9F5Xo7",
+      "authorship_tag": "ABX9TyNCQhQHu6xtHxQLgBkmoytx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -949,6 +949,19 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "HInWRz3LNHa-"
+      },
+      "source": [
+        "If we understand this pie chart-\n",
+        "\n",
+        "1. The most popular types of cabs are B,C and E\n",
+        "\n",
+        "2. Around 20% of the Customers have not entered the cab type, but due to loss of information we cannot risk removing these observations either."
       ]
     },
     {
